Fim de semana APK

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "io.ionic.starter",
-  "appName": "ionic-react-app",
+  "appName": "TasksIonic",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "build",
