--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "ionic-react-app",
+  "name": "TasksIonic",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "^2.4.2",
     "@capacitor/core": "2.4.2",
     "@ionic/react": "^5.0.7",
     "@ionic/react-router": "^5.0.7",
@@ -20,6 +21,7 @@
     "moment": "^2.29.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-gravatar": "^2.6.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
